chat app frontend and backend configured with bugs

--- a/real-time-chat-server/api/chat-message/models/chat-message.settings.json
+++ b/real-time-chat-server/api/chat-message/models/chat-message.settings.json
@@ -12,8 +12,8 @@
   "pluginOptions": {},
   "attributes": {
     "sender": {
-      "collection": "client",
-      "via": "chat_message"
+      "via": "chat_message",
+      "collection": "client"
     },
     "session": {
       "via": "chat_message",
