--- a/real-time-chat-server/api/client/models/client.settings.json
+++ b/real-time-chat-server/api/client/models/client.settings.json
@@ -26,15 +26,15 @@
     },
     "role": {
       "type": "string",
-      "required": true
+      "required": false
     },
     "chat_message": {
-      "via": "sender",
-      "model": "chat-message"
+      "model": "chat-message",
+      "via": "sender"
     },
     "chat_sessions": {
-      "via": "participants",
-      "collection": "chat-session"
+      "collection": "chat-session",
+      "via": "participants"
     }
   }
 }
